--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
 rootProject.name = 'harpsharp-backend'
 include 'infra_rds'
-include 'board', 'auth', 'todo'
+include 'board', 'auth', 'todo', 'album'
