--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -50,6 +50,11 @@ jobs:
           java-version: "17"
           distribution: "corretto"
 
+      - name: Set up Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: '8.5'
+
       - name: YML 파일 생성
         working-directory: ./
         run: |
