--- a/infra/nginx/conf.d/redirect.conf
+++ b/infra/nginx/conf.d/redirect.conf
@@ -30,6 +30,10 @@ upstream swagger {
     server swagger:8080;
 }
 
+upstream album {
+    server album:8080;
+}
+
 
 server {
        listen  443 ssl;
@@ -49,7 +53,6 @@ server {
                  return 204;
             }
 
-            include /etc/nginx/conf.d/proxy.conf;
             proxy_pass http://front;
        }
 
@@ -102,6 +105,15 @@ server {
             }
             proxy_pass http://todo;
        }
+
+       location /api/v1/album {
+            include /etc/nginx/conf.d/header.conf;
+            if ($request_method = 'OPTIONS') {
+                return 204;
+            }
+            proxy_pass http://album;
+       }
+
 
        location /api/v1/gpt {
             rewrite ^/api/v1/gpt(?<realuri>/.*)$ $realuri break;
