--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 .gradle
-build/
+!album/build/api-spec/album.json
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
