--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -111,7 +111,7 @@ jobs:
           mkdir -p build/api-spec
           chmod +x ./gradlew
           ./gradlew clean build --warning-mode all
-          mv build/api-spec/album.json ../infra/swagger/
+          mv src/main/resources/album.json ../infra/swagger/
 
       - name: Configure AWS credentials
         if: ${{ github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/main' }}
