--- a/infra/nginx/conf.d/header.conf
+++ b/infra/nginx/conf.d/header.conf
@@ -13,7 +13,7 @@ proxy_hide_header Access-Control-Allow-Credentials;
 
 add_header 'Access-Control-Allow-Origin' 'http://localhost:3000';
 add_header 'Access-Control-Allow-Credentials' 'true';
-add_header 'Access-Control-Allow-Headers' : 'Origin, Accept, X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization';
+add_header 'Access-Control-Allow-Headers' 'Origin, Accept, X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization';
 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PATCH';
 add_header 'Access-Control-Expose-Headers' 'Content-Length, Authorization';
-add_header 'Access-Control-Max-Age' : '60';
+add_header 'Access-Control-Max-Age' '60';
