fix: album 업로드 이전 버전으로 롤백

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -57,13 +57,13 @@ jobs:
           echo "${{ secrets.APPLICATION_AUTH_LOCAL }}" | base64 --decode > auth/src/main/resources/application-local.yaml
           echo "${{ secrets.APPLICATION_AUTH_PROD  }}" | base64 --decode > auth/src/main/resources/application-prod.yaml
           
-          echo "${{ secrets.APPLICATION_AUTH_DEFAULT }}" | base64 --decode > board/src/main/resources/application.yaml
-          echo "${{ secrets.APPLICATION_AUTH_LOCAL }}" | base64 --decode > board/src/main/resources/application-local.yaml
-          echo "${{ secrets.APPLICATION_AUTH_PROD  }}" | base64 --decode > board/src/main/resources/application-prod.yaml
+          echo "${{ secrets.APPLICATION_CRUD_DEFAULT }}" | base64 --decode > board/src/main/resources/application.yaml
+          echo "${{ secrets.APPLICATION_CRUD_LOCAL }}" | base64 --decode > board/src/main/resources/application-local.yaml
+          echo "${{ secrets.APPLICATION_CRUD_PROD  }}" | base64 --decode > board/src/main/resources/application-prod.yaml
           
-          echo "${{ secrets.APPLICATION_AUTH_DEFAULT }}" | base64 --decode > todo/src/main/resources/application.yaml
-          echo "${{ secrets.APPLICATION_AUTH_LOCAL }}" | base64 --decode > todo/src/main/resources/application-local.yaml
-          echo "${{ secrets.APPLICATION_AUTH_PROD  }}" | base64 --decode > todo/src/main/resources/application-prod.yaml
+          echo "${{ secrets.APPLICATION_CRUD_DEFAULT }}" | base64 --decode > todo/src/main/resources/application.yaml
+          echo "${{ secrets.APPLICATION_CRUD_LOCAL }}" | base64 --decode > todo/src/main/resources/application-local.yaml
+          echo "${{ secrets.APPLICATION_CRUD_PROD  }}" | base64 --decode > todo/src/main/resources/application-prod.yaml
 
       - name: 빌드 및 API 명세서 생성 (Auth)
         working-directory: ./auth
