--- a/infra/nginx/conf.d/redirect.conf
+++ b/infra/nginx/conf.d/redirect.conf
@@ -22,8 +22,8 @@ upstream front {
     server front-front-1:3000;
 }
 
-upstream gpt {
-    server gpt4o:5001;
+upstream gpt4o {
+    server flask:5001;
 }
 
 upstream swagger {
@@ -32,6 +32,10 @@ upstream swagger {
 
 upstream album {
     server album:8080;
+}
+
+upstream dalle {
+    server dalle:5001;
 }
 
 
@@ -87,6 +91,7 @@ server {
             proxy_pass http://auth;
        }
 
+
        location /api/v1/user {
             limit_except GET POST PATCH DELETE {
                 deny all;
@@ -122,6 +127,15 @@ server {
                 return 204;
             }
             proxy_pass http://gpt;
+       }
+
+       location /api/v2/gpt {
+             rewrite ^/api/v1/gpt(?<realuri>/.*)$ $realuri break;
+             include /etc/nginx/conf.d/header.conf;
+             if ($request_method = 'OPTIONS') {
+                 return 204;
+             }
+             proxy_pass http://dalle;
        }
 
        location = /api/v1/verify {
