--- a/infra/nginx/conf.d/redirect.conf
+++ b/infra/nginx/conf.d/redirect.conf
@@ -22,8 +22,8 @@ upstream front {
     server front-front-1:3000;
 }
 
-upstream gpt4o {
-    server flask:5001;
+upstream gpt {
+    server gpt4o:5001;
 }
 
 upstream swagger {
@@ -130,7 +130,7 @@ server {
        }
 
        location /api/v2/gpt {
-             rewrite ^/api/v1/gpt(?<realuri>/.*)$ $realuri break;
+             rewrite ^/api/v2/gpt(?<realuri>/.*)$ $realuri break;
              include /etc/nginx/conf.d/header.conf;
              if ($request_method = 'OPTIONS') {
                  return 204;
@@ -147,16 +147,7 @@ server {
             proxy_pass http://auth;
        }
 
-       location = /api/v1/board {
-            include /etc/nginx/conf.d/header.conf;
-            if ($request_method = 'OPTIONS') {
-                return 204;
-            }
-
-            proxy_pass http://board;
-       }
-
-       location /api/v1/board/posts {
+       location /api/v1/board {
             include /etc/nginx/conf.d/header.conf;
 
             if ($request_method = GET) {
@@ -170,7 +161,7 @@ server {
             proxy_pass http://board;
        }
 
-       location /internal/api/v1/board/posts {
+       location /internal/api/v1/board {
             internal;
             rewrite ^/internal(?<realuri>/.*)$ $realuri break;
             include /etc/nginx/conf.d/header.conf;
@@ -181,15 +172,7 @@ server {
             proxy_pass http://board;
        }
 
-       location = /api/v1/todo {
-            include /etc/nginx/conf.d/header.conf;
-            if ($request_method = 'OPTIONS') {
-                return 204;
-            }
-            proxy_pass http://todo;
-       }
-
-       location /api/v1/todo/posts {
+       location /api/v1/todo {
             include /etc/nginx/conf.d/header.conf;
 
             if ($request_method = GET) {
@@ -204,7 +187,7 @@ server {
             proxy_pass http://todo;
        }
 
-       location /internal/api/v1/todo/posts {
+       location /internal/api/v1/todo {
             internal;
             include /etc/nginx/conf.d/header.conf;
             rewrite ^/internal(?<realuri>/.*)$ $realuri break;
