feat: ai 문맥 유지 기능 추가, frontend 최신화

--- a/auth/src/main/resources/application-prod.yml
+++ b/auth/src/main/resources/application-prod.yml
@@ -35,3 +35,16 @@ spring:
       repositories:
         enabled:
           false
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    web:
+      server:
+        auto-time-requests: true
