--- a/board/src/main/resources/application-prod.yml
+++ b/board/src/main/resources/application-prod.yml
@@ -23,3 +23,16 @@ spring:
     show_sql: true
   logging.level:
     org.hibernate.SQL: debug
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    web:
+      server:
+        auto-time-requests: true
