--- a/build.gradle
+++ b/build.gradle
@@ -62,6 +62,9 @@ subprojects {
         testImplementation 'org.projectlombok:lombok:1.18.20'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
         testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+        implementation 'org.springframework.boot:spring-boot-starter-actuator'
+        implementation 'micrometer.io:micrometer-registry-prometheus'
     }
 
     test {
