--- a/dalle/Dockerfile
+++ b/dalle/Dockerfile
@@ -1,14 +1,12 @@
 # 베이스 이미지 선택
-FROM python:3.12-slim
-
-# 작업 디렉토리 설정
-WORKDIR /app
+FROM python:3.12.4-slim
 
 # 필요한 파일 복사
-COPY . /app
+COPY . .
 
 # 필요 패키지 설치
+RUN pip install python-dotenv
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Flask 서버 실행
-CMD ["python", "app.py"]
+ENTRYPOINT ["python3", "app.py"]
