fix: dalle api router 최신화, next env 최신화

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -225,7 +225,7 @@ jobs:
         working-directory: ./frontend
         run: |
           mkdir -p deploy-front
-          echo "${{ secrets.ENV }}" | base64 --decode >> ./deploy-front/env.local
+          echo "${{ secrets.ENV_NEXT }}" | base64 --decode >> ./deploy-front/env.local
           mv .dockerignore dockerignore
           mv .eslintrc.json eslintrc.json
           rsync -av --exclude='deploy-front' --exclude='node_modules' ./ deploy-front/
