feat: java 서버의 시간대를 timezone/Asia로 설정

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:17-jdk
 
 COPY auth-0.0.1-SNAPSHOT.jar .
 
-ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "./auth-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-Duser.timezone=Asia/Seoul", "-Dspring.profiles.active=prod", "-jar", "./board-0.0.1-SNAPSHOT.jar"]
