--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     expose:
       - "3000"
     environment:
-      - NEXT_PUBLIC_API_URL=https://harpsharp.com
+      - NEXT_PUBLIC_API_URL=https://harpsharp.com/api/v1
       - NEXT_PUBLIC_SIGNAL_TTL=30000
 networks:
   harpsharp:
